--- a/sdk/sdk-core/pom.xml
+++ b/sdk/sdk-core/pom.xml
@@ -31,6 +31,8 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
+            <version>5.4.2</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
